2009-06-24  Alvin Delagon  <adelagon@flumotion.com>

	* flumotion/component/feedcomponent.py:
	Reverting to NoneType return. Fixed the connectEater docstring

2009-06-23  Alvin Delagon  <adelagon@flumotion.com>

	* flumotion/component/feedcomponent.py:
	Return defer.succeed(None) instead

2009-06-23  Alvin Delagon  <adelagon@flumotion.com>

	* flumotion/component/feedcomponent.py:
	No need to do string interpolation in debug logging

2009-06-23  Alvin Delagon  <adelagon@flumotion.com>

	* flumotion/component/feedcomponent.py:
	Include Feed info in the debug log from the last commit

2009-06-23  Alvin Delagon  <adelagon@flumotion.com>

	* flumotion/component/feedcomponent.py:
	Added debug log on instances where eatFrom calls are ignored.

2009-06-22  Xavier Queralt  <xqueralt@flumotion.com>

	* flumotion/component/base/feedersnode.py:
	Force the first node to be selected when the selection vanishes, for
	example, because a row is collapsed.
	Fixes #1312

2009-06-20  Thomas Vander Stichele  <thomas at apestaart dot org>

	* common/common.mk:
	  Use COVERAGE_MODULES for the coverage runs; warn if not defined.
	* common/flumotion-trial:
	  This code snippet mangling sys.path is in Twisted's trial and
	  not in flumotion-trial.  Without it, no coverage is shown for
	  flumotion.extern.log even though its tests got run.

2009-06-20  Alvin Delagon  <adelagon@flumotion.com>

	reviewed by: Zaheer Abbas Merali

	* flumotion/component/feedcomponent.py:
	* flumotion/test/Makefile.am:
	* flumotion/test/test_component_feedcomponent.py (added):
	Ignore eatFrom calls if the feed is the same as the current one. Added
	feedcomponent unit test.
	Fixes #1277

2009-06-16  Jan Urbanski  <jurbanski@flumotion.com>

	* flumotion/component/misc/httpserver/httpserver.py:
	Log the exact timestamp of the request start.

2009-06-16  Xavier Queralt  <xqueralt@flumotion.com>

	* data/glade/connections.glade:
	Instantiate the ObjectList and set its callbacks from the glade file.